--- a/detail_post.html
+++ b/detail_post.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Post | Donasi Kita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
       <div class="mx-auto max-w-screen-sm flex items-center justify-between py-1 p-10">
-        <a href="/dist/index.html">
+        <a href="index.html">
           <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.30587 10.4019L10.8618 16.0093L8.9172 18L0 9L8.9172 0L10.8618 1.99065L5.30587 7.59813H27.5294V10.4019H5.30587Z" fill="white" /></svg
         ></a>
@@ -71,7 +71,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fugit aspernatur, nam, ad error velit nostrum pariatur, reprehenderit recusandae possimus provident. Tenetur similique, reiciendis ratione possimus iure eligendi vel,
             totam mollitia eos eum odio fugiat quibusdam omnis veritatis deleniti. Quis exercitationem suscipit perferendis iure quas.
           </p>
-          <div class="w-full flex justify-center my-5"><a href="/dist/pages/cerita.html" class="text-center text-lime-400 font-semibold text-lg">Lihat Selengkapnya</a></div>
+          <div class="w-full flex justify-center my-5"><a href="cerita.html" class="text-center text-lime-400 font-semibold text-lg">Lihat Selengkapnya</a></div>
         </div>
         <div class="w-full border-b-[2px] border-gray-200 py-5">
           <h2 class="font-semibold text-lg text-gray-700 my-3">Donatur</h2>
