--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-    <link href="./assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
@@ -36,12 +36,12 @@
           <h1 class="text-2xl">Kita Bantu Sesama di Aplikasi <span class="font-bold">DonasiKita</span></h1>
         </div>
         <div class="flex justify-end">
-          <img src="./assets/images/Banner.svg" alt="" />
+          <img src="./dist/assets/images/Banner.svg" alt="" />
         </div>
       </div>
       <!-- end header judul -->
       <div class="w-full min-h-screen bg-white rounded-t-[50px] p-8">
-        <a href="/dist/pages/kategori.html"> <h2 class="font-bold text-lg text-gray-600">Categories</h2></a>
+        <a href="kategori.html"> <h2 class="font-bold text-lg text-gray-600">Categories</h2></a>
         <div class="my-5">
           <ul class="flex gap-4 overflow-auto">
             <li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full text-white bg-hijau-kb flex items-center gap-2">
@@ -50,17 +50,17 @@
               </svg>
               All
             </li>
-            <a href="/dist/pages/kategori_kemanusiaan.html"><li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full text-gray-400">Kemanusiaan</li></a>
+            <a href="kategori_kemanusiaan.html"><li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full text-gray-400">Kemanusiaan</li></a>
             <li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full text-gray-400">Zakat</li>
             <li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full text-gray-400">Rumah Ibadah</li>
           </ul>
         </div>
         <!-- box pertama -->
         <div>
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2220.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2220.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -89,10 +89,10 @@
           <!-- end box pertama -->
           <!-- box kedua -->
 
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2225-1.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2225-1.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -121,10 +121,10 @@
           <!-- end box kedua -->
           <!-- box ketiga -->
 
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2225-2.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2225-2.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -153,10 +153,10 @@
           <!-- endbox ketiga -->
           <!-- box keempat -->
 
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2225-3.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2225-3.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -185,10 +185,10 @@
           <!-- end box keempat -->
           <!-- box kelima -->
 
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2225-4.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2225-4.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -217,10 +217,10 @@
           <!-- end box kelima -->
           <!-- box keenam -->
 
-          <a href="/dist/pages/detail_post.html"
+          <a href="detail_post.html"
             ><div class="flex border-b-[2px] border-b-gray-200 py-4 gap-3">
               <div class="w-1/3">
-                <img src="./assets/images/Rectangle 2225.jpg" alt="" />
+                <img src="./dist/assets/images/Rectangle 2225.jpg" alt="" />
               </div>
               <div class="w-2/3">
                 <p class="mb-1 text-xs flex items-center gap-2 text-gray-500">
@@ -259,7 +259,7 @@
             </svg>
             Home
           </div>
-          <a href="./pages/riwayat.html">
+          <a href="riwayat.html">
             <div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-s-gray-200 border-e-gray-200 border-s-[2px] border-e[2px] py-2">
               <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -269,7 +269,7 @@
               Riwayat
             </div>
           </a>
-          <a href="./pages/akun.html">
+          <a href="akun.html">
             <div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-s-gray-200 border-e-gray-200 border-s-[2px] border-e[2px] py-2">
               <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
                 <path
