--- a/kategori.html
+++ b/kategori.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kategori | DonasiKita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
       <div class="mx-auto max-w-screen-sm flex gap-2 items-center py-2 p-10">
-        <a href="/dist/index.html"><svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a href="index.html"><svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.30587 10.4019L10.8618 16.0093L8.9172 18L0 9L8.9172 0L10.8618 1.99065L5.30587 7.59813H27.5294V10.4019H5.30587Z" fill="white" />
           </svg></a>
         <h1 class="font-semibold text-lg text-white">Kategori</h1>
