--- a/kategori_kemanusiaan.html
+++ b/kategori_kemanusiaan.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kategori Kemanusiaan | Donasi Kita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
       <div class="mx-auto max-w-screen-sm flex gap-2 items-center py-2 p-10">
-        <a href="/dist/index.html"><svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a href="index.html"><svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5.30587 10.4019L10.8618 16.0093L8.9172 18L0 9L8.9172 0L10.8618 1.99065L5.30587 7.59813H27.5294V10.4019H5.30587Z" fill="white" />
         </svg></a>
         <h1 class="font-semibold text-lg text-white">Kemanusiaan</h1>
@@ -20,7 +20,7 @@
       ">
         <div class="my-5">
           <ul class="flex gap-4 overflow-auto">
-            <a href="/dist/index.html">
+            <a href="index.html">
               <li class="border-[1px] text-nowrap border-gray-200 px-3 py-2 rounded-full  text-gray-400 flex items-center gap-2">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M12.8 14L9.6 10.8889H12V3.11111H9.6L12.8 0L16 3.11111H13.6V10.8889H16M0 12.4444V10.8889H8V12.4444M0 7.77778V6.22222H5.6V7.77778M0 3.11111V1.55556H3.2V3.11111H0Z" fill="#9ca3af" />
