--- a/pembayaran_berhasil.html
+++ b/pembayaran_berhasil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pembayaran Berhasil | DonasiKita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <main>
@@ -33,7 +33,7 @@
           <h1 class="text-white font-semibold text-2xl text-center">Donasi Kamu Sudah <br />Kami terima</h1>
         </div>
         <div>
-          <a href="/dist/index.html" class="bg-white text-hijau-kb py-3 px-14 rounded-lg font-semibold hover:shadow-2xl hover:scale-105 transition-all duration-300 ease-in-out">Selesai</a>
+          <a href="index.html" class="bg-white text-hijau-kb py-3 px-14 rounded-lg font-semibold hover:shadow-2xl hover:scale-105 transition-all duration-300 ease-in-out">Selesai</a>
         </div>
       </div>
     </main>
