--- a/ubah_katasandi.html
+++ b/ubah_katasandi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ubah Kata Sandi | DonasiKita</title>
 
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
@@ -59,8 +59,7 @@
         </div>
       </div>
       <div class="bottom-0 sticky p-8">
-        <a href="before_login.html">
-          <button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Konfirmasi</button></a>
+        <a href="before_login.html"> <button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Konfirmasi</button></a>
       </div>
     </main>
   </body>
