--- a/before_login.html
+++ b/before_login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Akun | DonasiKita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <title>Login | DonasiKita</title>
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
@@ -14,40 +14,14 @@
     </nav>
     <main class="mx-auto max-w-screen-sm">
       <div class="bg-lime-400 px-10 pt-10 pb-20">
-        <div class="flex gap-5 items-center">
-          <div>
-            <svg width="77" height="77" viewBox="0 0 77 77" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M38.5 66.22C28.875 66.22 20.3665 61.292 15.4 53.9C15.5155 46.2 30.8 41.965 38.5 41.965C46.2 41.965 61.4845 46.2 61.6 53.9C59.0552 57.6905 55.6171 60.7968 51.5888 62.9452C47.5604 65.0937 43.0655 66.2183 38.5 66.22ZM38.5 11.55C41.5632 11.55 44.501 12.7669 46.6671 14.9329C48.8331 17.099 50.05 20.0367 50.05 23.1C50.05 26.1632 48.8331 29.101 46.6671 31.2671C44.501 33.4331 41.5632 34.65 38.5 34.65C35.4367 34.65 32.499 33.4331 30.3329 31.2671C28.1669 29.101 26.95 26.1632 26.95 23.1C26.95 20.0367 28.1669 17.099 30.3329 14.9329C32.499 12.7669 35.4367 11.55 38.5 11.55ZM38.5 0C33.4441 0 28.4377 0.995832 23.7667 2.93064C19.0957 4.86544 14.8514 7.70133 11.2764 11.2764C4.05624 18.4965 0 28.2892 0 38.5C0 48.7108 4.05624 58.5035 11.2764 65.7236C14.8514 69.2987 19.0957 72.1346 23.7667 74.0694C28.4377 76.0042 33.4441 77 38.5 77C48.7108 77 58.5035 72.9438 65.7236 65.7236C72.9438 58.5035 77 48.7108 77 38.5C77 17.2095 59.675 0 38.5 0Z"
-                fill="white"
-              />
-            </svg>
-          </div>
-          <div>
-            <h1 class="text-4xl font-semibold text-white mb-4">Zaky Fauzan</h1>
-            <a href="edit_profile.html" class="bg-white rounded-full text-hijau-kb px-3 py-1">Edit Profile</a>
-          </div>
+        <h1 class="text-white font-semibold text-2xl text-center">Silahkan Masuk Dengan Akun Anda Untuk Membantu di DonasiKita</h1>
+        <div class="my-4">
+          <a href="/dist/index.html" class="bg-white py-3 flex justify-center font-semibold text-hijau-kb rounded-full">Masuk Sekarang</a>
         </div>
+        <p class="text-white text-center">Belum Punya Akun? <a href="daftar.html" class="font-semibold">Daftar</a></p>
       </div>
       <div class="min-h-screen bg-white -mt-10 rounded-t-[50px] p-10">
-        <a href="ubah_katasandi.html">
-          <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
-            <div class="flex gap-4 items-center">
-              <div>
-                <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M7 16L3 12L4.41 10.59L7 13.17L13.59 6.58L15 8M9 0L0 4V10C0 15.55 3.84 20.74 9 22C14.16 20.74 18 15.55 18 10V4L9 0Z" fill="#65a30d" />
-                </svg>
-              </div>
-              <div class="font-medium text-gray-700 text-xl">Ubah Kata Sandi</div>
-            </div>
-            <div>
-              <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 1L7 7L1 13" stroke="#ACACAC" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </div>
-          </div>
-        </a>
-        <a href="faq.html">
+        <a href="faq2.html">
           <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
             <div class="flex gap-4 items-center">
               <div>
@@ -67,7 +41,7 @@
             </div>
           </div>
         </a>
-        <a href="syarat-ketentuan.html">
+        <a href="syarat-ketentuan2.html">
           <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
             <div class="flex gap-4 items-center">
               <div>
@@ -87,7 +61,7 @@
             </div>
           </div>
         </a>
-        <a href="tentang-donasikita.html">
+        <a href="tentang-donasikita2.html">
           <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
             <div class="flex gap-4 items-center">
               <div>
@@ -99,24 +73,6 @@
                 </svg>
               </div>
               <div class="font-medium text-gray-700 text-xl">Tentang Donasi Kita</div>
-            </div>
-            <div>
-              <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 1L7 7L1 13" stroke="#ACACAC" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </div>
-          </div>
-        </a>
-        <a href="before_login.html">
-          <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
-            <div class="flex gap-4 items-center">
-              <div class="fill-white">
-                <svg width="18" height="18" viewBox="0 0 18 18"  xmlns="http://www.w3.org/2000/svg">
-                  <path d="M9 12L12 9M12 9L9 6M12 9H1M6 4.24859V4.2002C6 3.08009 6 2.51962 6.21799 2.0918C6.40973 1.71547 6.71547 1.40973 7.0918 1.21799C7.51962 1 8.08009 1 9.2002 1H13.8002C14.9203 1 15.4796 1 15.9074 1.21799C16.2837 1.40973 16.5905 1.71547 16.7822 2.0918C17 2.5192 17 3.07899 17 4.19691V13.8036C17 14.9215 17 15.4805 16.7822 15.9079C16.5905 16.2842 16.2837 16.5905 15.9074 16.7822C15.48 17 14.921 17 13.8031 17H9.19691C8.07899 17 7.5192 17 7.0918 16.7822C6.71547 16.5905 6.40973 16.2839 6.21799 15.9076C6 15.4798 6 14.9201 6 13.8V13.75" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
-                  
-              </div>
-              <div class="font-medium text-gray-700 text-xl">Keluar</div>
             </div>
             <div>
               <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -144,22 +100,22 @@
       <div class="mx-auto max-w-screen-sm bottom-0 sticky p-5">
         <div class="grid grid-cols-3 bg-white rounded-full shadow-xl p-2 gap-2 hover:shadow-2xl hover:scale-105 transition-all duration-300 ease-in-out">
           <!-- Home -->
-          <a href="/dist/index.html"><div class="flex justify-center items-center gap-2 py-2 text-gray-400 fill-gray-400">
+          <div class="flex justify-center items-center gap-2 py-2 text-gray-400 fill-gray-400 ">
             <svg width="22" height="18" viewBox="0 0 22 18" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z" />
             </svg>
             Home
-          </div></a>
+          </div>
 
           <!-- Riwayat -->
-          <a href="riwayat.html"><div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-s-gray-200 border-e-gray-200 border-s-[2px] border-e-[2px] py-2">
+          <div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-s-gray-200 border-e-gray-200 border-s-[2px] border-e-[2px] py-2">
             <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M14 3.78947V5.68421H4V3.78947H14ZM12 7.57895V9.47368H4V7.57895H12ZM15 16.1053L18 18V0H0V18L3 16.1053L6 18L9 16.1053L12 18L15 16.1053ZM16 1.89474V14.4568L15 13.8316L12 15.7263L9 13.8316L6 15.7263L3 13.8316L2 14.4568V1.89474H16Z"
               />
             </svg>
             Riwayat
-          </div></a>
+          </div>
 
           <!-- Akun -->
           <div class="flex justify-center items-center gap-2 text-white fill-white bg-lime-400 rounded-full hover:scale-105 transition-all duration-300 ease-in-out border-s-gray-200 border-e-gray-200 border-s-[2px] border-e-[2px] py-2">
