--- a/login.html
+++ b/login.html
@@ -3,28 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daftar | DonasiKita</title>
+    <title>Login | DonasiKita</title>
 
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
       <div class="mx-auto max-w-screen-sm py-2 p-10">
-        <h1 class="text-white text-xl font-semibold">Daftar</h1>
+        <h1 class="text-white text-xl font-semibold">Login</h1>
       </div>
     </nav>
     <main class="mx-auto max-w-screen-sm bg-white">
       <div class="min-h-screen p-10">
-        <h1 class="text-gray-700 font-semibold text-2xl">Daftar untuk menjadi salah satu donatur di DonasiKita</h1>
+        <h1 class="text-gray-700 font-semibold text-2xl">Silahkan Masukan Email dan Password Kamu disini</h1>
 
         <div class="my-10">
-          <div class="w-full my-8">
-            <input type="text" class="border-[1.5px] border-gray-400 rounded-lg w-full py-3 px-2" placeholder="Nama Lengkap" />
+          <div class=" w-full my-8">
+            <input type="text" class="border-[1.5px] border-gray-400 rounded-lg w-full py-3 px-2" value="ZakyFauzan@kasih.com" />
           </div>
-          <div class="w-full my-8">
-            <input type="text" class="border-[1.5px] border-gray-400 rounded-lg w-full py-3 px-2" placeholder="Email" />
-          </div>
-          <div class="w-full my-8 relative">
+          <div class=" w-full my-8 relative">
             <input type="password" class="border-[1.5px] border-gray-400 rounded-lg w-full py-3 px-2" placeholder="password" />
             <div class="absolute right-0 inset-y-0 pr-4 flex items-center">
               <svg width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +37,7 @@
           <a href="lupa_katasandi.html" class="text-hijau-kb">Lupa Kata Sandi?</a>
         </div>
         <div class="mt-8">
-          <h1 class="text-gray-700 font-semibold text-2xl">Atau Lebih Cepat</h1>
+          <h1 class="text-gray-700 font-semibold text-2xl">Atau Masuk Lebih Cepat</h1>
 
           <button class="w-full rounded-full border-[1.5px] border-gray-200 flex p-3 gap-2 justify-center mt-8">
             <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -54,9 +51,12 @@
         </div>
       </div>
       <div class="bottom-0 sticky p-8">
-        <a href="login.html"><button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Daftar</button></a>
+        <a href="/dist/index.html">
+          <button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Masuk Sekarang</button>
+        </a>
+        
 
-        <p class="text-gray-700 text-center my-4">Sudah Punya Akun ? <a href="/dist/index.html" class="text-hijau-kb">Masuk Sekarang</a></p>
+        <p class="text-gray-700 text-center my-4">Belum Punya Akun ? <a href="daftar.html" class="text-hijau-kb">Daftar Disini</a></p>
       </div>
     </main>
   </body>
