--- a/riwayat.html
+++ b/riwayat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riwayat | DonasiKita</title>
-    <link href="/dist/assets/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
     <nav>
@@ -119,7 +119,7 @@
       <!-- bottom pilihan menu -->
       <div class="mx-auto max-w-screen-sm bottom-0 sticky p-5">
         <div class="grid grid-cols-3 bg-white rounded-full shadow-xl p-2 gap-2 hover:shadow-2xl hover:scale-105 transition-all duration-300 ease-in-out">
-          <a href="/dist/index.html"><div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-e-gray-200 border-e-[2px] py-2">
+          <a href="index.html"><div class="flex justify-center items-center gap-2 text-gray-400 fill-gray-400 border-e-gray-200 border-e-[2px] py-2">
             <svg width="22" height="18" viewBox="0 0 22 18" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.50909 18V11.6471H12.7636V18H18.0818V9.52941H21.2727L10.6364 0L0 9.52941H3.19091V18H8.50909Z" />
             </svg>
