--- a/akun.html
+++ b/akun.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="min-h-screen bg-white -mt-10 rounded-t-[50px] p-10">
-        <a href="ubah_katasandi.html">
+        <a href="ubah_katasandi2.html">
           <div class="flex justify-between items-center border-b-[2px] border-b-gray-200 py-8">
             <div class="flex gap-4 items-center">
               <div>
