--- a/before_login.html
+++ b/before_login.html
@@ -16,7 +16,7 @@
       <div class="bg-lime-400 px-10 pt-10 pb-20">
         <h1 class="text-white font-semibold text-2xl text-center">Silahkan Masuk Dengan Akun Anda Untuk Membantu di DonasiKita</h1>
         <div class="my-4">
-          <a href="/dist/index.html" class="bg-white py-3 flex justify-center font-semibold text-hijau-kb rounded-full">Masuk Sekarang</a>
+          <a href="index.html" class="bg-white py-3 flex justify-center font-semibold text-hijau-kb rounded-full">Masuk Sekarang</a>
         </div>
         <p class="text-white text-center">Belum Punya Akun? <a href="daftar.html" class="font-semibold">Daftar</a></p>
       </div>
