--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="bottom-0 sticky p-8">
-        <a href="/dist/index.html">
+        <a href="index.html">
           <button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Masuk Sekarang</button>
         </a>
         
