--- a/daftar.html
+++ b/daftar.html
@@ -56,7 +56,7 @@
       <div class="bottom-0 sticky p-8">
         <a href="login.html"><button class="w-full rounded-full text-white bg-lime-400 flex p-3 gap-2 justify-center mt-8 font-semibold hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out">Daftar</button></a>
 
-        <p class="text-gray-700 text-center my-4">Sudah Punya Akun ? <a href="/dist/index.html" class="text-hijau-kb">Masuk Sekarang</a></p>
+        <p class="text-gray-700 text-center my-4">Sudah Punya Akun ? <a href="index.html" class="text-hijau-kb">Masuk Sekarang</a></p>
       </div>
     </main>
   </body>
